Fix #556 (fhs-simple-2019 searchbox broken in Webkit browsers)

Closes #568.

--- a/templates/fhs-simple-2019/stylesheet.css
+++ b/templates/fhs-simple-2019/stylesheet.css
@@ -393,6 +393,8 @@ button.burgerJS {
 	margin: .35em 0 1.5em 0;
 }
 #searchbox input[name="search"] {
+	-webkit-appearance: none;
+	-webkit-border-radius: 0;
 	margin: 0;
 	padding: .25em .5em !important;
 	width: 75%;
@@ -402,6 +404,8 @@ button.burgerJS {
 	color: #333;
 }
 #searchbox input[type="submit"] {
+	-webkit-appearance: none;
+	-webkit-border-radius: 0;
 	margin: 0;
 	padding: .25em .5em !important;
 	width: 25%;
@@ -409,6 +413,7 @@ button.burgerJS {
 	background: #f60;
 	color: #fff;
 	text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+	border-radius: 0;
 }
 #searchbox input[type="submit"]:hover,
 #searchbox input[type="submit"]:focus {
